gcp-terraform/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quest-service
  namespace: quest
spec:
  selector:
    app: quest-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
