gcp-terraform/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quest-ingress
  namespace: quest
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "quest-cert"
  labels:
    app: quest-app
spec:
  rules:
  - host: gke-quest.thetechvoyager.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quest-service
            port:
              number: 3000
